@@ -28,7 +28,7 @@ internal_directories="_,scripts,Template,data,_"
 # if there are two arguments, just call switch-to-version
 if [[ $# -gt 1 ]]; then
     # just call switch-to-version
-    `dirname $0`/switch-to-version.sh $*
+    `dirname $0`/internal/switch-to-version.sh $*
     exit 0
 fi
 
@@ -70,14 +70,14 @@ for contrib in $svn_contrib_list; do
 	if [[ "${version_local}" == "[None]" ]]; then
 	    # the local version does not exist! Ask if we want to install it
 	    get_yesno_answer "  Do you want to install the svn version?" || {
-		`dirname $0`/switch-to-version.sh $contrib $version_svn
+		`dirname $0`/internal/switch-to-version.sh $contrib $version_svn
 	    }
 	elif [[ "${version_local}" == "[NoSVN]" ]]; then
 	    echo "You have an unversionned copy of $contrib in the way. It will not be updated."
 	else
 	    # the local version exists! Ask if we want to update it
 	    get_yesno_answer "  Do you want to update your local version to the svn one?" || {
-		`dirname $0`/switch-to-version.sh $contrib $version_svn
+		`dirname $0`/internal/switch-to-version.sh $contrib $version_svn
 	    }
 	fi
         echo
